--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="hero-title">Find Your Perfect Match</h1>
                 <p class="hero-subtitle">Connecting talented professionals with exceptional opportunities. We provide comprehensive hiring solutions for companies and career advancement for individuals.</p>
                 <div class="hero-buttons">
-                    <a href="placement.html" class="btn btn-primary">Explore Opportunities</a>
+                    <a href="placement.html" class="btn btn-primary">Apply For Jobs</a>
                     <a href="services.html" class="btn btn-secondary">Our Services</a>
                 </div>
             </div>
